# fast_kinematics

./: .gitignore  CMakeLists.txt  build.sh  dev.md  idea.md  readme.md  setup.py
docker/: Dockerfile
include/: cuda_quat.h  fast_kinematics.h  fk.h  kinematics.h  parser.h
pybind/: fast_kinematics.pyi  pybind_fast_kinematics.cpp  pybind_fast_kinematics.cu
src/: fast_kinematics.cu  kinematics.cu  parser.cpp
tests/: Untitled-1.py  test.ipynb  test_client.cpp  test_client.cu
